force-app/main/default/objects/IMDB_Movie__c/IMDB_Movie__c.object-meta.xml
<CustomObject>
    <label>IMDB Movie</label>
    <nameField>
        <displayFormat>M-{0}</displayFormat>
        <label>Movie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>