force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Content_Rating__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Content_Rating__c</fullName>
    <label>Content Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>