force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Description__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>