force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Genres__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Genres__c</fullName>
    <label>Genres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>