force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Id__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Id__c</fullName>
    <externalId>true</externalId>
    <label>IMDB Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>