force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>