force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Metacritic_Rating__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Metacritic_Rating__c</fullName>
    <label>Metacritic Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>