force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Plot__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Plot__c</fullName>
    <label>Plot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>