force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Rating__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Rating__c</fullName>
    <label>IMDB Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>