force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Rating_Votes__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Rating_Votes__c</fullName>
    <label>IMDB Rating Votes</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>