force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Runtime__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Runtime__c</fullName>
    <label>Runtime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>