force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Stars__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Stars__c</fullName>
    <label>Stars</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>