force-app/main/default/objects/IMDB_Movie__c/fields/IMDB_Title__c.field-meta.xml
<CustomField>
    <fullName>IMDB_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>